--- a/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-packaging-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-packaging-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
   workspace:
     clean: all
   timeoutInMinutes:  180
-  pool: 'Onnxruntime-Linux-GPU'
+  pool: 'Onnxruntime-Linux-GPU-NV6'
   variables:
     CUDA_VERSION: '11.4'
   steps:
