--- a/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
+++ b/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
@@ -35,7 +35,7 @@ jobs:
   workspace:
     clean: all
   timeoutInMinutes:  120
-  pool: 'Onnxruntime-Linux-GPU'
+  pool: 'Onnxruntime-Linux-GPU-NV6'
   variables:
     CUDA_VERSION: '11.4'
   steps:
@@ -228,7 +228,7 @@ jobs:
 - job: Final_Jar_Testing_Linux_GPU
   workspace:
     clean: all
-  pool: 'Onnxruntime-Linux-GPU'
+  pool: 'Onnxruntime-Linux-GPU-NV6'
   variables:
   - name: runCodesignValidationInjection
     value: false
@@ -263,7 +263,7 @@ jobs:
 - job: Linux_Packaging_combined_GPU
   workspace:
     clean: all
-  pool: 'Onnxruntime-Linux-GPU'
+  pool: 'Onnxruntime-Linux-GPU-NV6'
   dependsOn:
   - Linux_C_API_Packaging_GPU_x64
   - Linux_C_API_Packaging_GPU_TensorRT_x64
@@ -559,7 +559,7 @@ jobs:
 
 - template: nuget/templates/test_linux.yml
   parameters:
-    AgentPool : Onnxruntime-Linux-GPU
+    AgentPool : Onnxruntime-Linux-GPU-NV6
     ArtifactSuffix: 'GPU'
     NugetPackageName : 'Microsoft.ML.OnnxRuntime.Gpu'
 
