--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-torch1100-cuda102.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-torch1100-cuda102.yml
@@ -10,5 +10,5 @@ stages:
     gcc_version: 8
     cmake_cuda_architectures: 37;50;52;60;61;70;75;80;86
     docker_file: Dockerfile.manylinux2014_training_cuda10_2
-    agent_pool: Onnxruntime-Linux-GPU
+    agent_pool: Onnxruntime-Linux-GPU-NV6
     upload_wheel: 'yes'
