--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-torch190-cuda111.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-torch190-cuda111.yml
@@ -10,5 +10,5 @@ stages:
     gcc_version: 9
     cmake_cuda_architectures: 37;50;52;60;61;70;75;80
     docker_file: Dockerfile.manylinux2014_training_cuda11_1
-    agent_pool: Onnxruntime-Linux-GPU
+    agent_pool: Onnxruntime-Linux-GPU-NV6
     upload_wheel: 'yes'
