--- a/tools/ci_build/github/azure-pipelines/mac-ios-packaging-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-ios-packaging-pipeline.yml
@@ -23,6 +23,15 @@ jobs:
 
   timeoutInMinutes: 240
 
+  variables:
+    - name: isMain
+      value: ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
+    - name: finalStorage
+      ${{ if eq(variables['isMain'], 'true') }}:
+        value: '--final_storage'
+      ${{ else }}:
+        value: ''
+
   steps:
   - task: InstallAppleCertificate@2
     inputs:
@@ -201,6 +210,17 @@ jobs:
   - publish: "$(Build.ArtifactStagingDirectory)"
     artifact: ios_packaging_artifacts
     displayName: "Publish artifacts"
+
+  - task: CmdLine@2
+    condition: succeeded()
+    displayName: 'Upload wheel'
+    inputs:
+      script: |
+        files=($(Build.ArtifactStagingDirectory)/Debug/dist/*.whl) && \
+        echo ${files[0]} && \
+        echo ${{ variables['finalStorage'] }} && \
+        tools/ci_build/upload_python_package_to_azure_storage.py \
+            --python_wheel_path ${files[0]} ${{ variables['finalStorage'] }}
 
   - template: templates/component-governance-component-detection-steps.yml
     parameters :
