--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cpu_cache
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cpu_cache
@@ -3,6 +3,8 @@ FROM quay.io/pypa/manylinux2014_x86_64:latest
 ENV PATH /usr/local/gradle/bin:/opt/rh/devtoolset-10/root/usr/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 ADD scripts /tmp/scripts
+RUN ls /tmp/scripts
+RUN chmod a+x /tmp/scripts/install_cache.sh
 RUN cd /tmp/scripts && /tmp/scripts/manylinux/install_centos.sh && /tmp/scripts/manylinux/install_deps.sh && /tmp/scripts/install_cache.sh && rm -rf /tmp/scripts
 
 ARG BUILD_UID=1001
