--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cpu_cache
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cpu_cache
@@ -7,6 +7,9 @@ RUN ls /tmp/scripts
 RUN chmod a+x /tmp/scripts/install_cache.sh
 RUN cd /tmp/scripts && /tmp/scripts/manylinux/install_centos.sh && /tmp/scripts/manylinux/install_deps.sh && /tmp/scripts/install_cache.sh && rm -rf /tmp/scripts
 
+RUN ls /opt/cache/bin
+RUN export PATH="/opt/cache/bin:$PATH"
+
 ARG BUILD_UID=1001
 ARG BUILD_USER=onnxruntimedev
 RUN adduser --uid $BUILD_UID $BUILD_USER
