--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cpu.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cpu.yml
@@ -71,7 +71,7 @@ stages:
               -e BUILD_BUILDNUMBER \
               onnxruntimetrainingcpubuild \
                 /bin/bash -c \
-                "export PATH="/opt/cache/bin:$PATH; \
+                "export PATH='/opt/cache/bin:$PATH'; \
                 $(PythonManylinuxDir)/bin/python3 /onnxruntime_src/tools/ci_build/build.py \
                   --build_dir /build --cmake_generator Ninja \
                   --config Debug Release \
