--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cpu.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cpu.yml
@@ -75,6 +75,8 @@ stages:
                 export PATH='/opt/cache/bin:$PATH'; \
                 which cc; \
                 cat /opt/cache/bin/cc; \
+                /opt/rh/devtoolset-10/root/usr/bin/cc --version; \
+                sccache /opt/rh/devtoolset-10/root/usr/bin/cc --version ; \
                 $(PythonManylinuxDir)/bin/python3 /onnxruntime_src/tools/ci_build/build.py \
                   --build_dir /build --cmake_generator Ninja \
                   --config Debug Release \
