test azcopy in Linux pool

--- a/tools/ci_build/github/azure-pipelines/mac-ios-packaging-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-ios-packaging-pipeline.yml
@@ -15,7 +15,23 @@ parameters:
 name: "$(Date:yyyyMMdd)$(Rev:rrr)"  # build number format
 
 jobs:
+- job: TestJob
+  displayName: "Test Job"
+  pool: Linux-CPU
+
+  steps:
+  - task: CmdLine@2
+    displayName: 'Test AzCopy'
+    inputs:
+      script: |
+        files=("tools/ci_build/github/apple/ios_packaging.requirements.txt") && \
+        echo ${files[0]} && \
+        echo ${{ variables['finalStorage'] }} && \
+        tools/ci_build/upload_python_package_to_azure_storage.py \
+            --python_wheel_path ${files[0]} ${{ variables['finalStorage'] }}
+
 - job: IosPackaging
+  dependsOn: TestJob
   displayName: "iOS Packaging"
 
   pool:
