--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cuda11_4_tensorrt8_2
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cuda11_4_tensorrt8_2
@@ -1,3 +1,7 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License.
+
+# This file is used by "Python packaging pipeline", "Zip-Nuget-Java-Nodejs Packaging Pipeline", "Linux GPU TensorRT CI Pipeline".
 ARG BASEIMAGE=nvidia/cuda:11.4.2-cudnn8-devel-centos7
 ARG POLICY=manylinux2014
 ARG PLATFORM=x86_64
