--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_training_cuda11_3
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_training_cuda11_3
@@ -1,3 +1,7 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License.
+
+# This file is used by "Python Packaging Pipeline (Training Cuda 11.3)".
 ARG BASEIMAGE=nvcr.io/nvidia/cuda:11.3.1-cudnn8-devel-centos7
 ARG POLICY=manylinux2014
 ARG PLATFORM=x86_64
