--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_training_cuda11_5
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_training_cuda11_5
@@ -1,3 +1,7 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License.
+
+# This file is used by "Python Packaging Pipeline (Training Cuda 11.5)".
 ARG BASEIMAGE=nvidia/cuda:11.5.0-cudnn8-devel-centos7
 ARG POLICY=manylinux2014
 ARG PLATFORM=x86_64
