--- a/tools/ci_build/github/azure-pipelines/nuget/templates/win-ci-2019.yml
+++ b/tools/ci_build/github/azure-pipelines/nuget/templates/win-ci-2019.yml
@@ -51,7 +51,7 @@ jobs:
   steps:
     - checkout: self
       clean: true
-      submodules: recursive
+      submodules: none
 
     - powershell: |
         if($env:TELEMETRYGUID)
