--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cpu.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cpu.yml
@@ -42,7 +42,7 @@ stages:
 
       - checkout: self
         clean: true
-        submodules: recursive
+        submodules: none
 
       - template: templates/set-python-manylinux-variables-step.yml
 
