--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-rocm.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-rocm.yml
@@ -75,7 +75,7 @@ stages:
 
       - checkout: self
         clean: true
-        submodules: recursive
+        submodules: none
 
       - template: templates/ set-python-manylinux-variables-step.yml
 
