--- a/tools/ci_build/github/azure-pipelines/templates/py-packaging-training-cuda-stage.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/py-packaging-training-cuda-stage.yml
@@ -102,7 +102,7 @@ stages:
      
       - checkout: self
         clean: true
-        submodules: recursive
+        submodules: none
 
       - template: set-python-manylinux-variables-step.yml
 
