--- a/tools/ci_build/github/azure-pipelines/orttraining-linux-external-custom-ops.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-linux-external-custom-ops.yml
@@ -7,7 +7,7 @@ jobs:
   steps:
   - checkout: self
     clean: true
-    submodules: none
+    submodules: recursive
 
   - template: templates/get-docker-image-steps.yml
     parameters:
