--- a/tools/ci_build/github/azure-pipelines/templates/win-cpu-ci.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/win-cpu-ci.yml
@@ -48,6 +48,9 @@ jobs:
   pool: 'Win-CPU-2019'
   timeoutInMinutes:  300  
   steps:
+  - checkout: self
+    clean: true
+    submodules: none
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '3.7'
