--- a/tools/ci_build/github/azure-pipelines/templates/c-api-cpu.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/c-api-cpu.yml
@@ -71,6 +71,9 @@ jobs:
     vmImage: 'macOS-11'
   timeoutInMinutes:  240
   steps:
+    - checkout: self
+      clean: true
+      submodules: none
     - template: set-version-number-variables-step.yml
 
     - script: |
