--- a/tools/ci_build/github/azure-pipelines/templates/c-api-linux-cpu.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/c-api-linux-cpu.yml
@@ -27,6 +27,9 @@ jobs:
   timeoutInMinutes:  210
   pool: 'Linux-CPU'
   steps:
+    - checkout: self
+      clean: true
+      submodules: none
     - template: set-version-number-variables-step.yml
     - template: get-docker-image-steps.yml
       parameters:
