--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -669,8 +669,6 @@ if (onnxruntime_BUILD_UNIT_TESTS)
   if (TARGET GTest::gtest)
     message("Use gtest from preinstalled system lib")
   else()
-    message("Use gtest from submodule")
-
     # WebAssembly threading support in Node.js is still an experimental feature and
     # not working properly with googletest suite.
     if (onnxruntime_BUILD_WEBASSEMBLY)
@@ -679,6 +677,7 @@ if (onnxruntime_BUILD_UNIT_TESTS)
 
     # gtest and gmock
  if(onnxruntime_USE_SUBMODULE)
+    message("Use gtest from submodule")
     set_msvc_c_cpp_compiler_warning_level(4)
     add_subdirectory(${PROJECT_SOURCE_DIR}/external/googletest EXCLUDE_FROM_ALL)
     set_msvc_c_cpp_compiler_warning_level(3)
@@ -733,12 +732,12 @@ if (onnxruntime_BUILD_BENCHMARKS)
   if (TARGET benchmark::benchmark)
     message("Use benchmark from preinstalled system lib")
   else()
-    message("Use benchmark from submodule")
     # We will not need to test benchmark lib itself.
     set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Disable benchmark testing as we don't need it.")
     # We will not need to install benchmark since we link it statically.
     set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Disable benchmark install to avoid overwriting vendor install.")
     if(onnxruntime_USE_SUBMODULE)
+      message("Use benchmark from submodule")
       add_subdirectory(${PROJECT_SOURCE_DIR}/external/googlebenchmark EXCLUDE_FROM_ALL)
     else()
       FetchContent_Declare(
@@ -893,8 +892,8 @@ if (date_FOUND)
   message("Use date from preinstalled system lib")
   add_library(date_interface ALIAS date::date)
 else()
-  message("Use date from submodule")
   if(onnxruntime_USE_SUBMODULE)
+    message("Use date from submodule")
     add_subdirectory(external/date EXCLUDE_FROM_ALL)
   else()
     FetchContent_Declare(
@@ -915,8 +914,8 @@ endif()
 if (TARGET Boost::mp11)
   message("Use mp11 from preinstalled system lib")
 else()
-  message("Use mp11 from submodule")
   if(onnxruntime_USE_SUBMODULE)
+    message("Use mp11 from submodule")
     add_subdirectory(external/mp11 EXCLUDE_FROM_ALL)
   else()
     FetchContent_Declare(
@@ -933,12 +932,12 @@ endif()
 if (nlohmann_json_FOUND)
   message("Use json from preinstalled system lib")
 else()
-  message("Use json from submodule")
   set(JSON_BuildTests OFF CACHE INTERNAL "")
   set(JSON_Install OFF CACHE INTERNAL "")
   set(JSON_BuildTests OFF CACHE INTERNAL "")
   set(JSON_Install OFF CACHE INTERNAL "")
   if(onnxruntime_USE_SUBMODULE)
+    message("Use json from submodule")
     add_subdirectory(external/json EXCLUDE_FROM_ALL)
   else()
     FetchContent_Declare(
@@ -956,8 +955,8 @@ endif()
 if (re2_FOUND)
   message("Use re2 from preinstalled system lib")
 else()
-  message("Use re2 from submodule")
   if(onnxruntime_USE_SUBMODULE)
+   message("Use re2 from submodule")
    add_subdirectory(external/re2 EXCLUDE_FROM_ALL)
    set_target_properties(re2 PROPERTIES FOLDER "External/re2")
   else()
@@ -1030,12 +1029,12 @@ if (CPUINFO_SUPPORTED)
   if (cpuinfo_FOUND)
     message("Use cpuinfo from preinstalled system lib")
   else()
-    message("Use cpuinfo from submodule")
     set(CPUINFO_BUILD_TOOLS OFF CACHE INTERNAL "")
     set(CPUINFO_BUILD_UNIT_TESTS OFF CACHE INTERNAL "")
     set(CPUINFO_BUILD_MOCK_TESTS OFF CACHE INTERNAL "")
     set(CPUINFO_BUILD_BENCHMARKS OFF CACHE INTERNAL "")
     if(onnxruntime_USE_SUBMODULE)
+      message("Use cpuinfo from submodule")
       add_subdirectory(external/pytorch_cpuinfo EXCLUDE_FROM_ALL)
       if (MSVC)
         target_compile_options(cpuinfo PRIVATE "-D_CRT_SECURE_NO_WARNINGS")
@@ -1645,8 +1644,7 @@ if (onnxruntime_USE_XNNPACK)
                          "but onnxruntime_DISABLE_CONTRIB_OPS is ON")
   endif()
 
-  set(XNNPACK_DIR external/XNNPACK)
-  set(XNNPACK_INCLUDE_DIR ${XNNPACK_DIR}/include)
+
   set(XNNPACK_USE_SYSTEM_LIBS ON CACHE INTERNAL "")  
   set(XNNPACK_BUILD_TESTS OFF CACHE INTERNAL "")
   set(XNNPACK_BUILD_BENCHMARKS OFF CACHE INTERNAL "")
@@ -1654,10 +1652,31 @@ if (onnxruntime_USE_XNNPACK)
   set(FP16_BUILD_BENCHMARKS OFF CACHE INTERNAL "")
   set(CLOG_SOURCE_DIR "${PYTORCH_CPUINFO_DIR}/deps/clog")
   set(CPUINFO_SOURCE_DIR ${PYTORCH_CPUINFO_DIR})
-
-  add_subdirectory(external/FP16)  
-  add_subdirectory(external/pthreadpool)
-  add_subdirectory(external/XNNPACK)
+  
+  if(onnxruntime_USE_SUBMODULE)
+      set(XNNPACK_DIR external/XNNPACK)
+      set(XNNPACK_INCLUDE_DIR ${XNNPACK_DIR}/include)
+      add_subdirectory(external/FP16)  
+      add_subdirectory(external/pthreadpool)
+      add_subdirectory(external/XNNPACK)
+  else()
+      FetchContent_Declare(
+        fp16
+        URL https://github.com/Maratyszcza/FP16/archive/0a92994d729ff76a58f692d3028ca1b64b145d91.zip
+      )
+      FetchContent_MakeAvailable(fp16)
+      FetchContent_Declare(
+        pthreadpool
+        URL https://github.com/Maratyszcza/pthreadpool/archive/1787867f6183f056420e532eec640cba25efafea.zip
+      )
+      FetchContent_MakeAvailable(pthreadpool)
+      FetchContent_Declare(
+        googlexnnpack
+        URL https://github.com/google/XNNPACK/archive/510b8e0f9af1891588c52bef64248cb72f04c30e.zip
+      )
+      FetchContent_MakeAvailable(googlexnnpack)
+      set(XNNPACK_DIR ${googlexnnpack_SOURCE_DIR})
+  endif()
 
   set_target_properties(fp16 PROPERTIES FOLDER "External/Xnnpack")
   set_target_properties(pthreadpool PROPERTIES FOLDER "External/Xnnpack")
@@ -1766,7 +1785,6 @@ if (Flatbuffers_FOUND)
   message("Use flatbuffers from preinstalled system lib")
   add_library(flatbuffers ALIAS flatbuffers::flatbuffers)
 else()
-  message("Use flatbuffers from submodule")
   # We do not need to build flatc for iOS or Android Cross Compile
   if (CMAKE_SYSTEM_NAME STREQUAL "iOS" OR CMAKE_SYSTEM_NAME STREQUAL "Android" OR onnxruntime_BUILD_WEBASSEMBLY)
     set(FLATBUFFERS_BUILD_FLATC OFF CACHE BOOL "FLATBUFFERS_BUILD_FLATC" FORCE)
@@ -1777,6 +1795,7 @@ else()
   set(FLATBUFFERS_BUILD_FLATLIB ON CACHE BOOL "FLATBUFFERS_BUILD_FLATLIB" FORCE)
   set_msvc_c_cpp_compiler_warning_level(4)
   if(onnxruntime_USE_SUBMODULE)
+    message("Use flatbuffers from submodule")
     add_subdirectory(external/flatbuffers EXCLUDE_FROM_ALL)
   else()
     FetchContent_Declare(
