--- a/tools/ci_build/github/azure-pipelines/templates/win-cpu-ci.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/win-cpu-ci.yml
@@ -35,6 +35,15 @@ parameters:
   type: boolean
   default: true
 
+- name: RunStaticCodeAnalysis
+  displayName: Run Static Code Analysis
+  type: boolean
+  default: true
+
+- name: submodules
+  type: string
+  default: none
+
 jobs:
 - job: build_${{ parameters.job_name_suffix }}
   variables:
