--- a/tools/ci_build/github/azure-pipelines/win-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/win-ci-pipeline.yml
@@ -114,6 +114,7 @@ stages:
         job_name_suffix: training_x64_debug
         RunOnnxRuntimeTests: ${{ parameters.RunOnnxRuntimeTests }}
         RunStaticCodeAnalysis: false
+        submodules: true
 
 - stage: training_x64_release
   dependsOn: []
@@ -128,5 +129,5 @@ stages:
         isX86: false
         job_name_suffix: training_x64_release
         RunOnnxRuntimeTests: ${{ parameters.RunOnnxRuntimeTests }}
-        # Liqun is fixing them
         RunStaticCodeAnalysis: true
+        submodules: true
