--- a/tools/ci_build/github/azure-pipelines/templates/win-cpu-ci.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/win-cpu-ci.yml
@@ -54,7 +54,7 @@ jobs:
   steps:
   - checkout: self
     clean: true
-    submodules: none
+    submodules: ${{ parameters.submodules }}
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '3.7'
