--- a/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
@@ -85,8 +85,8 @@ jobs:
     displayName: Copy test executables
     inputs:
       contents: |
-        'build/Debug/onnxruntime_test_all'
-        'build/Debug/onnxruntime_test_runner'
+        build/Debug/onnxruntime_test_all
+        build/Debug/onnxruntime_test_runner
       targetFolder: $(Build.ArtifactStagingDirectory)
       overWrite: true
 
