--- a/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
@@ -77,7 +77,7 @@ jobs:
   - task: CopyFiles@2
     displayName: Copy test data
     inputs:
-      contents: 'build/**/testdata/**'
+      contents: 'build/Debug/testdata/**'
       targetFolder: $(Build.ArtifactStagingDirectory)
       overWrite: true
 
@@ -214,7 +214,7 @@ jobs:
   - task: CopyFiles@2
     displayName: Copy test data
     inputs:
-      contents: 'build_nnapi/**/testdata/**'
+      contents: 'build_nnapi/Debug/testdata/**'
       targetFolder: $(Build.ArtifactStagingDirectory)
       overWrite: true
 
@@ -222,8 +222,8 @@ jobs:
     displayName: Copy Test Executables
     inputs:
       contents: |
-        build/Debug/onnxruntime_test_all
-        build/Debug/onnx_test_runner
+        build_nnapi/Debug/onnxruntime_test_all
+        build_nnapi/Debug/onnx_test_runner
       targetFolder: $(Build.ArtifactStagingDirectory)
       overWrite: true
 
