--- a/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
@@ -106,6 +106,8 @@ stages:
       inputs:
         pathToPublish: $(Build.ArtifactStagingDirectory)
         artifactName: CPUBuildOutput
+        parallel: true
+        parallelCount: 8
 
     - template: templates/clean-agent-build-directory-step.yml
 
