--- a/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
@@ -107,7 +107,6 @@ stages:
         pathToPublish: $(Build.ArtifactStagingDirectory)
         artifactName: CPUBuildOutput
         parallel: true
-        parallelCount: 8
 
     - template: templates/clean-agent-build-directory-step.yml
 
@@ -195,6 +194,7 @@ stages:
       inputs:
         pathToPublish: $(Build.ArtifactStagingDirectory)
         artifactName: NNAPIBuildOutput
+        parallel: true
 
     - template: templates/clean-agent-build-directory-step.yml
 
