--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -46,8 +46,8 @@ jobs:
 
   - task: AzureFileCopy@4
     inputs:
-      sourcePath: "onnxruntimecpubuild.tar"
-      azureSubscription: '$(zhanyi-conn-string)'
+      sourcePath: onnxruntimecpubuild.tar
+      azureSubscription: 'AI Infra Build'
       destination: azureBlob
       storage: onnxruntimeinstaller
       containerName: imagetar
