--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -45,7 +45,7 @@ jobs:
       RunAsPreJob: false
 
   - script: |
-      az storage blob upload -f onnxruntimecpubuild.tar -c myimages -n MyBlob
+      az storage blob upload -f onnxruntimecpubuild.tar -c myimages --connection-string '$(zhanyi-conn-string)'
     displayName: upload
 
 
