--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
 
   - script: |
       lsblk -d -o name,rota
-    displayname: Check Disk
+    displayName: Check Disk
 
   - task: NodeTool@0
     inputs:
